--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
+@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
 /* You can add global styles to this file, and also import other style files */
+body {  background-color: lightblue; }
+div {
+  border: 5px double whitesmoke;
+}
